# hermes-agent

./: .cursorrules  .env.example  .gitignore  AGENTS.md  Project_notes.md  README.md  RELEASE_v0.4.0.md  TODO.md  batch_runner.py  cli-config.yaml.example  cli.py  hermes_state.py  model_tools.py  pyproject.toml  requirements.txt  run_agent.py  setup-hermes.sh  toolsets.py
.github/workflows/: upload_to_pypi.yml
architecture/: tools.md
cron/: __init__.py  jobs.py  scheduler.py
docs/: cli.md  tools.md
environments/: __init__.py  agent_loop.py  hermes_base_env.py  hermes_swe_env.py  terminal_test_env.py  tool_context.py
environments/configs/: swe_default.yaml  terminal_test_default.yaml
environments/tool_call_parsers/: deepseek_v3_1_parser.py  deepseek_v3_parser.py
gateway/: run.py  session.py
hermes_cli/: config.py  doctor.py  gateway.py  main.py  setup.py  skills_hub.py  status.py
optional-skills/mlops/training/unsloth/references/: llms-full.md  llms-txt.md
scripts/: install.ps1  install.sh  release.py
skills/mlops/training/unsloth/references/: llms-full.md  llms-txt.md
skills/mlops/unsloth/references/: llms-full.md  llms-txt.md
skills/note-taking/obsidian/: SKILL.md
skills/research/research-paper-writing/templates/acl/: custom.bib
tools/: __init__.py  cronjob_tools.py  file_operations.py  memory_tool.py  process_registry.py  rl_training_tool.py  session_search_tool.py  skill_manager_tool.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  todo_tool.py  transcription_tools.py  tts_tool.py
